# sphinx-documentation

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: build_and_publish_documentation.yml  email.yaml  email.yml  gh-pages.yml
_sources/installation/: index.rst.txt
_sources/usage/: hierarchy.rst.txt  index.rst.txt  restructuredtext.rst.txt
_sources/usage/autodoc/: test_run.rst.txt
_sources/usage/autosummary/: installation.rst.txt  test_run.rst.txt
doc/source/: conf.py  index.rst
doc/source/installation/: index.rst
doc/source/usage/: github_page.rst  index.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs/_sources/: index.rst.txt
docs/_sources/contents/: installation.rst.txt
docs/_sources/installation/: index.rst.txt
docs/_sources/usage/: extensions.rst.txt  hierarchy.rst.txt  index.rst.txt  restructuredtext.rst.txt
docs/contents/: installation.html
docs/installation/: index.html
docs/usage/: extensions.html  hierarchy.html  index.html  restructuredtext.html
docs/usage/autodoc/: docstring.html  index.html  installation.html  test_run.html
docs/usage/autosummary/: index.html  installation.html  (+1 more)
gitdoc/contents/: installation.html
installation/: index.html
usage/: extensions.html  github_page.html  hierarchy.html  index.html  restructuredtext.html
usage/autodoc/: docstring.html  index.html  installation.html  test_run.html
usage/autosummary/: index.html  installation.html  test_run.html
(+6 files in other folders)
