[tool.poetry]
name = "sphinx-documentation"
version = "0.1.0"
description = ""
authors = ["Sangwon <lsw91.main@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sphinx_documentation"}]

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^6.0.0"
furo = "^2022.12.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
